--- a/mall-goods/pom.xml
+++ b/mall-goods/pom.xml
@@ -25,6 +25,20 @@
             <artifactId>rainbow-common-datasource-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.rainbow</groupId>
+            <artifactId>mall-common-doc-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.rainbow</groupId>
+            <artifactId>mall-common-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
