卖家端商品新增接口

--- a/mall-goods/src/main/resources/application.yml
+++ b/mall-goods/src/main/resources/application.yml
@@ -32,3 +32,7 @@ mall:
     description: mall商品模块测试文档
     contact: melo-lh
     version: 1.0
+
+logging:
+  level:
+    com.rainbow.mall.goods.mapper: debug
