--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <knife4j.version>2.0.2</knife4j.version>
         <rocketmq.version>2.1.0</rocketmq.version>
         <hutool.version>5.7.5</hutool.version>
+        <es.version>6.8.12</es.version>
     </properties>
 
 
@@ -136,6 +137,17 @@
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
                 <version>${hutool.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.elasticsearch</groupId>
+                <artifactId>elasticsearch</artifactId>
+                <version>${es.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.elasticsearch.client</groupId>
+                <artifactId>elasticsearch-rest-high-level-client</artifactId>
+                <version>${es.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
