--- a/mall-goods/mall-goods-service/src/main/resources/application.yml
+++ b/mall-goods/mall-goods-service/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
 
 
 mybatis-plus:
-  type-aliases-package: com.rainbow.mall.goods.service.entity
+  type-aliases-package: com.rainbow.mall.goods.service.pojo.entity
   mapper-locations: classpath*:/mapper/**/*.xml
   configuration:
     map-underscore-to-camel-case: true
