--- a/mall-base/mall-base-api/pom.xml
+++ b/mall-base/mall-base-api/pom.xml
@@ -3,23 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>rainbow-mall</artifactId>
+        <artifactId>mall-base</artifactId>
         <groupId>org.rainbow</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>mall-base</artifactId>
-    <packaging>pom</packaging>
-    <description>通用能力</description>
-    <modules>
-        <module>mall-base-api</module>
-        <module>mall-base-service</module>
-    </modules>
+    <artifactId>mall-base-api</artifactId>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-
 
 </project>
