--- a/mall-base/mall-base-service/pom.xml
+++ b/mall-base/mall-base-service/pom.xml
@@ -22,6 +22,11 @@
             <version>4.3.1</version>
         </dependency>
         <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.8</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
@@ -32,6 +37,16 @@
         <dependency>
             <groupId>org.rainbow</groupId>
             <artifactId>mall-common-doc-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.rainbow</groupId>
+            <artifactId>mall-common-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.rainbow</groupId>
+            <artifactId>mall-common-entity</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
