构建xxl-job starter

--- a/mall-common/pom.xml
+++ b/mall-common/pom.xml
@@ -18,6 +18,7 @@
         <module>mall-common-doc-starter</module>
         <module>rainbow-common-datasource-starter</module>
         <module>mall-common-entity</module>
+        <module>mall-common-job-starter</module>
     </modules>
 
     <properties>
