--- a/mall-common/mall-common-redis-starter/pom.xml
+++ b/mall-common/mall-common-redis-starter/pom.xml
@@ -15,7 +15,7 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-
+    <description>基于redis定制得starter</description>
     <dependencies>
         <!-- redis依赖-->
         <dependency>
