--- a/mall-goods/mall-goods-service/pom.xml
+++ b/mall-goods/mall-goods-service/pom.xml
@@ -32,6 +32,11 @@
         </dependency>
         <dependency>
             <groupId>org.rainbow</groupId>
+            <artifactId>mall-common-job-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.rainbow</groupId>
             <artifactId>mall-common-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
