--- a/mall-goods/mall-goods-service/src/main/resources/application.yml
+++ b/mall-goods/mall-goods-service/src/main/resources/application.yml
@@ -33,6 +33,18 @@ mall:
     contact: melo-lh
     version: 1.0
 
+xxl:
+  job:
+    adminAddresses: http://127.0.0.1:7000/xxl-job-admin
+    accessToken:
+    appName: mall-goods
+    address:
+    ip:
+    port: 9999
+    logpath: /data/applogs/xxl-job/jobhandler
+    logRetentionDays: 30
+
+
 logging:
   level:
     com.rainbow.mall.goods.service.mapper: debug
