--- a/mall-auth/pom.xml
+++ b/mall-auth/pom.xml
@@ -10,10 +10,36 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>mall-auth</artifactId>
+    <packaging>pom</packaging>
     <description>鉴权</description>
+    <modules>
+        <module>mall-auth-api</module>
+        <module>mall-auth-service</module>
+    </modules>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.rainbow</groupId>
+            <artifactId>mall-common-doc-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.rainbow</groupId>
+            <artifactId>mall-common-redis-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.rainbow</groupId>
+            <artifactId>mall-common-datasource-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
