--- a/mall-marketing/mall-marketing-api/pom.xml
+++ b/mall-marketing/mall-marketing-api/pom.xml
@@ -3,19 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>rainbow-mall</artifactId>
+        <artifactId>mall-marketing</artifactId>
         <groupId>org.rainbow</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>mall-order</artifactId>
-    <packaging>pom</packaging>
-    <description>订单</description>
-    <modules>
-        <module>mall-order-api</module>
-        <module>mall-order-service</module>
-    </modules>
+    <artifactId>mall-marketing-api</artifactId>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
