--- a/mall-marketing/pom.xml
+++ b/mall-marketing/pom.xml
@@ -8,7 +8,12 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
     <description>营销</description>
+    <modules>
+        <module>mall-marketing-api</module>
+        <module>mall-marketing-service</module>
+    </modules>
     <artifactId>mall-marketing</artifactId>
 
     <properties>
