--- a/mall-member/mall-member-service/pom.xml
+++ b/mall-member/mall-member-service/pom.xml
@@ -3,14 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>rainbow-mall</artifactId>
+        <artifactId>mall-member</artifactId>
         <groupId>org.rainbow</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>mall-cms</artifactId>
-    <description>内容管理</description>
+    <artifactId>mall-member-service</artifactId>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
@@ -21,27 +21,18 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.rainbow</groupId>
-            <artifactId>mall-common-datasource-starter</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>org.rainbow</groupId>
             <artifactId>mall-common-doc-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.rainbow</groupId>
-            <artifactId>mall-common-core</artifactId>
+            <artifactId>mall-common-redis-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.rainbow</groupId>
-            <artifactId>mall-common-entity</artifactId>
+            <artifactId>mall-common-datasource-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
