整合oauth2实现权限认证

--- a/mall-common/mall-common-redis-starter/pom.xml
+++ b/mall-common/mall-common-redis-starter/pom.xml
@@ -17,6 +17,10 @@
     </properties>
     <description>基于redis定制得starter</description>
     <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
         <!-- redis依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
