--- a/mall-auth/mall-auth-service/src/main/resources/application.yml
+++ b/mall-auth/mall-auth-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   datasource:
     username: root
     password: 123456
-    url: jdbc:mysql://114.116.105.15:3306/mall_auth?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&allowMultiQueries=true&allowPublicKeyRetrieval=true&useAffectedRows=true
+    url: jdbc:mysql://114.116.105.15:3306/lilishop?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&allowMultiQueries=true&allowPublicKeyRetrieval=true&useAffectedRows=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.zaxxer.hikari.HikariDataSource
 
@@ -17,7 +17,7 @@ spring:
     port: 6379
 
 mybatis-plus:
-  type-aliases-package: com.rainbow.mall.auth.entity
+  type-aliases-package: com.rainbow.mall.auth.pojo.entity
   mapper-locations: classpath*:/mapper/**/*.xml
   configuration:
     map-underscore-to-camel-case: true
