整合oauth2实现权限认证

--- a/mall-auth/mall-auth-service/src/main/resources/application.yml
+++ b/mall-auth/mall-auth-service/src/main/resources/application.yml
@@ -5,6 +5,12 @@ spring:
   application:
     name: mall-auth
 
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 114.116.105.15:8848
+
+
   datasource:
     username: root
     password: 123456
