--- a/mall-gateway/src/main/resources/application.yml
+++ b/mall-gateway/src/main/resources/application.yml
@@ -47,3 +47,10 @@ spring:
             - Path=/mall_goods_search/**
           filters:
             - StripPrefix=1
+
+        - id: mall-auth
+          uri: lb://mall-auth
+          predicates:
+            - Path=/mall_auth/**
+          filters:
+            - StripPrefix=1
