--- a/mall-goods/mall-goods-service/pom.xml
+++ b/mall-goods/mall-goods-service/pom.xml
@@ -59,5 +59,10 @@
             <artifactId>mall-goods-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.rainbow</groupId>
+            <artifactId>mall-common-security-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
