--- a/mall-goods/mall-goods-service/src/main/resources/application.yml
+++ b/mall-goods/mall-goods-service/src/main/resources/application.yml
@@ -55,3 +55,10 @@ xxl:
 logging:
   level:
     com.rainbow.mall.goods.service.mapper: debug
+
+
+security:
+  oauth2:
+    resource:
+      user-info-uri: http://localhost:8002/user
+      id: ${spring.application.name}
