--- a/mall-pay/pom.xml
+++ b/mall-pay/pom.xml
@@ -10,7 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>mall-pay</artifactId>
+    <packaging>pom</packaging>
     <description>支付</description>
+    <modules>
+        <module>mall-pay-api</module>
+        <module>mall-pay-service</module>
+    </modules>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
