初步完成oauth授权

--- a/mall-auth/mall-auth-service/src/main/resources/application.yml
+++ b/mall-auth/mall-auth-service/src/main/resources/application.yml
@@ -39,7 +39,11 @@ mall:
     version: 1.0
 
 
-
+security:
+  oauth2:
+    resource:
+      id: ${spring.application.name}
+      user-info-uri: http://localhost:8002/user
 
 logging:
   level:
