--- a/mall-goods/mall-goods-service/pom.xml
+++ b/mall-goods/mall-goods-service/pom.xml
@@ -64,5 +64,9 @@
             <artifactId>mall-common-security-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-oauth2</artifactId>-->
+<!--        </dependency>-->
     </dependencies>
 </project>
